--- a/app/src/main/res/layout/activity_prizes.xml
+++ b/app/src/main/res/layout/activity_prizes.xml
@@ -32,8 +32,8 @@
 
     <EditText
         android:id="@+id/etAmountInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="238dp"
+        android:layout_height="51dp"
         android:ems="10"
         android:inputType="text"
         android:text="Total amount in USD"
